--- a/assignment.html
+++ b/assignment.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> my assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fast assit/assignment.css">
-</head>
-<body>
-    
+</head >
+<header class="header-bg">
+   <div class="div-banner">
+     <nav class="nav-content">
+        <h1 class="open-sans-typography logo">LOGO</h1>
+        <button class="btn-primary">Sing Up</button> 
+     </nav> 
+           <div class="banner-content">
+              <h1 class="open-sans-typography">Cool Dark UI Template for <br>
+                    Webflow Agencies!</h1>
+
+              <button class="btn-primary"> Stay Focused</button>
+            </div>  
+   </div> 
+</header>
+
+<body>    
 </body>
 </html>
