--- a/index.html
+++ b/index.html
@@ -90,16 +90,17 @@
    </main>
 </body>
     <footer>
-      <section>
-         <h1>LOGO</h1 >
-         <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.
-            Home</p>
-           <div class="item">
-             <p class="title">Home</p>
-            <p class="title">About</p>
-            <p class="title"> How it Works</p>
-            <p class="title"> Services</p>
-           </div>
+      <section class="open-sans-typograph">
+         <h1 class="footer">LOGO</h1 >
+         <p class="Subtitle">Ready to elevate your online presence? Contact us today to discuss <br>
+            your project and discover how we can bring your vision to life. </p>
+           <div class="items">
+                 <p> <a href="">Home</a>  </p>
+                 <p><a href="">, About</a></p>
+                 <p><a href=""> How it works</a></p>
+                 <p><a href="">Services</a></p>
+                     
+            </div>                 
       </section>
     </footer>
     <section class="Users’ Feedback Section">
