--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    </div> 
 </header>
 <body class="open-sans-typography">    
-   <main>
+   <main class="secondary-bg">
       <section class="Action">
          <div class="action-container">
              <h2> See It in Action</h2>
@@ -95,30 +95,13 @@
          <p class="Subtitle">Ready to elevate your online presence? Contact us today to discuss <br>
             your project and discover how we can bring your vision to life. </p>
            <div class="items">
-                 <p> <a href="">Home</a>  </p>
+                <p> <a href="">Home</a>  </p>
                  <p><a href="">, About</a></p>
                  <p><a href=""> How it works</a></p>
                  <p><a href="">Services</a></p>
                      
-            </div>                 
+            </div>         
+         
       </section>
     </footer>
-    <section class="Users’ Feedback Section">
-      <div class="review-card">
-         <div class="review-header">
-            <div class="stars">
-               <i class="fas fa-star"></i>
-               <i class="fas fa-star"></i>
-               <i class="fas fa-star"></i>
-               <i class="fas fa-star"></i>
-               <i class="fas fa-star"></i>
-            </div>
-            <h3 class="revew-title"></h3>
-            <p class="revew-subtitle"></p>
-         </div>
-      <img src="../my-assignment/B12A01-landing-launchpad/Assets/avatar.png" alt=" Reviwer photo">
-      </div>
-      <p class="reviewer-name">Reviewer name</p>
-      <p class="review-date">July 11, 2025</p>
-    </section>
 </html>
